tree-sitter-jabber/test/corpus/attributes.txt
=================
plain attributes
=================

@something
@foo.bar.baz
const A: B = C

------------------

(source_file
  declaration: (declaration
    attributes: (attributes
      (attribute
        name: (ident))
      (attribute
        name: (path
          root: (path
            root: (ident)
            name: (ident))
          name: (ident))))
    body: (const_decl
      name: (ident)
      type: (ident)
      value: (ident))))

====================
function attributes
====================

@thing("hello", 0xFF, 'c', some_item)
const foo: bar = baz

---------------------------------------

(source_file
  declaration: (declaration
    attributes: (attributes
      (attribute
        name: (ident)
        arguments: (attribute_arguments
          (string_literal)
          (hex_literal)
          (char_literal)
          (ident))))
    body: (const_decl
      name: (ident)
      type: (ident)
      value: (ident))))
