tree-sitter-jabber/test/corpus/field_expressions.txt
=========================
record field expressions
=========================

// without the parentheses, these would be parsed as paths
const foo    = (S).foo
const foobar = (S).foo.bar

----------------------------

(source_file
  (comment)
  declaration: (declaration
    body: (const_decl
      name: (ident)
      value: (field_expr
        item: (parenthesized_expr
          inner: (ident))
        field: (ident))))
  declaration: (declaration
    body: (const_decl
      name: (ident)
      value: (field_expr
        item: (field_expr
          item: (parenthesized_expr
            inner: (ident))
          field: (ident))
        field: (ident)))))

========================
tuple field expressions
========================

const first      = xs.1
const _99th      = xs.99
const firstfirst = xs.1.1

------------------------------

(source_file
  declaration: (declaration
    body: (const_decl
      name: (ident)
      value: (field_expr
        item: (ident)
        field: (tuple_field))))
  declaration: (declaration
    body: (const_decl
      name: (ident)
      value: (field_expr
        item: (ident)
        field: (tuple_field))))
  declaration: (declaration
    body: (const_decl
      name: (ident)
      value: (field_expr
        item: (field_expr
          item: (ident)
          field: (tuple_field))
        field: (tuple_field)))))
