tree-sitter-jabber/test/corpus/literals.txt
=============
unit literal
=============

const unit: () = ()

-------------------

(source_file
  (const_decl
    name:  (ident)
    type:  (unit_type)
    value: (unit_literal)))

=================
boolean literals
=================

const TRUE:  bool = true
const FALSE: bool = false

------------------------

(source_file
  (const_decl
    name:  (ident)
    type:  (primitive_type)
    value: (bool_literal_true))
  (const_decl
    name:  (ident)
    type:  (primitive_type)
    value: (bool_literal_false)))

==============
char literals
==============

const a: char = 'a'
const quote: char = '\''
const nil: char = '\x00'
const utf8: char = '\u{7FFF}'

----------------------------------

(source_file
  (const_decl
    name: (ident)
    type: (primitive_type)
    value: (char_literal))
  (const_decl
    name: (ident)
    type: (primitive_type)
    value: (char_literal))
  (const_decl
    name: (ident)
    type: (primitive_type)
    value: (char_literal))
  (const_decl
    name: (ident)
    type: (primitive_type)
    value: (char_literal)))

================
string literals
================

const hello: string = "hello, world!"
const escaped_quote: string = "\""

------------------------------------------

(source_file
  (const_decl
    name: (ident)
    type: (primitive_type)
    value: (string_literal))
  (const_decl
    name: (ident)
    type: (primitive_type)
    value: (string_literal)))

==========================
prefixed integer literals
==========================

const bin_zero: int = 0b00
const oct_zero: int = 0o00
const hex_zero: int = 0x00

-----------------------------

(source_file
  (const_decl
    name: (ident)
    type: (primitive_type)
    value: (bin_literal))
  (const_decl
    name: (ident)
    type: (primitive_type)
    value: (oct_literal))
  (const_decl
    name: (ident)
    type: (primitive_type)
    value: (hex_literal)))

=========================
decimal integer literals
=========================

const zero: int = 0
const  one: int = 1

---------------------------

(source_file
  (const_decl
    name: (ident)
    type: (primitive_type)
    value: (dec_literal))
  (const_decl
    name: (ident)
    type: (primitive_type)
    value: (dec_literal)))

===============
float literals
===============

const  tenth: float = 0.1
const   half: float = 0.5
const     mu: float = 1E-6

------------------------------

(source_file
  (const_decl
    name: (ident)
    type: (primitive_type)
    value: (float_literal))
  (const_decl
    name: (ident)
    type: (primitive_type)
    value: (float_literal))
  (const_decl
    name: (ident)
    type: (primitive_type)
    value: (float_literal)))
